#135: Create User Endpoint